# rust-smartcam

./: .gitignore  Cargo.toml  build.sh  c.example  docker-compose.yml  install-open-cv.sh  os-setup.sh
migrations/: 20220321051506_video_file.up.sql
src/: config.rs  core.rs  frame.rs  frame_reader.rs  frame_splitter.rs  frame_viewer.rs  logger.rs  main.rs  motion_detector.rs  uploader.rs  video_writer.rs
src/db/: mod.rs  storage_type.rs  video_file.rs
src/file_source/: mod.rs
src/frame_reader/: frame_reader_opencv.rs  frame_reader_v4l.rs  mod.rs  opencv.rs  rtsp.rs  v4l.rs
src/motion_detection/: mod.rs
src/repository/: local.rs  mod.rs
src/upload/: error.rs  mod.rs
src/video/: file_writer.rs  mod.rs  rtc_stream.rs  rtc_track.rs  video_proc.rs
src/web/: mod.rs
src/web/api/: mod.rs
web/: index.html  stream.js
