[package]
name = "smartcam"
version = "0.1.0"
authors = ["jaymell"]
edition = "2018"

[dependencies]
bytes = "1"
chrono = "0.4"
futures = "0.3.17"
libc     = "0.2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
gtk = "0.14.1"
glib = "0.14.1"
gdk-pixbuf = "0.14.0"
webrtc = "0.3.2"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0"
base64 = "0.13.0"
anyhow = "1.0"
ctrlc = "3.2.1"

aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.17-alpha", package = "aws-types" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.17-alpha", package = "aws-config" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.17-alpha", package = "aws-sdk-s3" }
opencv = { version = "0.53", features=["clang-runtime"] }
ffmpeg-next = { git = "https://github.com/jaymell/rust-ffmpeg", branch = "update-bindgen" }
ffmpeg-sys-next = { git = "https://github.com/jaymell/rust-ffmpeg-sys", branch = "update-bindgen" }
#ffmpeg-next = "4.4.0"
#ffmpeg-sys-next = "4.4.0"
v4l = "0.12.1"
strum = "0.21"
strum_macros = "0.21"

toml = "0.5.8"
serde = { version = "1.0.130",  features = ["derive"] }
once_cell = "1.9.0"
async-trait = "0.1.52"
